clusters/my-cluster/apps/prod/rss-api/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-api
  template:
    metadata:
      labels:
        app: rss-api
    spec:
      containers:
        - name: rss-api
          image: ghcr.io/ceddy-cedd/k3s-resume-platform/rss-api@sha256:fe0b3b24a2276733a202d5610f3315bf6f82ec590b313a3bede1c6b135d7d232
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
